# gadt-playground

./: .pre-commit-config.yaml  dune-project  exercises1-4.md  gadt_playground.opam
lib/: dune  expr.ml  handle.ml  printf.ml  vec.ml
scripts/: lint-ocaml
test/: dune  test_expr.ml  test_handle.ml  test_printf.ml  test_vec.ml
